<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MailMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account">AccountActivity</string>

    <string name="about">About Xmail</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="flag_as_new">Flag as new</string>
    <string name="attachment">Attachment</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>

    <!-- 邮箱文件夹 -->
    <string name="inbox">INBOX</string>

    <!-- 邮件登录 -->
    <string name="login_label">Please Login in you E-mail</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_email_passwd">Email Password</string>
    <string name="login">Login</string>

    <!--写邮件-->
    <string name="write_email">Write Email</string>
    <string name="write_email_body">Write Email</string>

    <!--主页面-->
    <string name="search_email">Search E-mails</string>

    <!--关于App-->
    <string name="about_app">Xmail is a third-party mail client based on K-9</string>

    <!-- 登录测试 -->
    <string name="default_email">kesco915@foxmail.com</string>
    <string name="default_email_passwd">a1991915</string>

    <!-- K9 -->
    <string name="message_compose_quote_header_from">From:</string>
    <string name="message_compose_quote_header_to">To:</string>
    <string name="message_compose_quote_header_cc">Cc:</string>
    <string name="message_compose_quote_header_send_date">Sent:</string>
    <string name="message_compose_quote_header_subject">Subject:</string>
    <string name="general_no_subject">(No subject)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mail_operation">MailOperationActivity</string>
    <string name="title_activity_information">InformationActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
