<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_delete"
            android:title="@string/delete"
            android:icon="@drawable/selector_action_delete"
            android:orderInCategory="100"
            app:showAsAction="always"/>

    <item
            android:id="@+id/action_to_new"
            android:title="@string/flag_as_new"
            android:icon="@drawable/selector_action_email"
            android:orderInCategory="200"
            app:showAsAction="always"/>

    <item
            android:id="@+id/action_about"
            android:title="@string/about"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>