<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_attachment"
            android:title="@string/attachment"
            android:icon="@drawable/selector_action_attachment"
            android:orderInCategory="100"
            app:showAsAction="always"/>

    <item
            android:id="@+id/action_send"
            android:title="@string/send"
            android:icon="@drawable/selector_action_send"
            android:orderInCategory="200"
            app:showAsAction="always"/>

    <item
            android:id="@+id/action_about"
            android:title="@string/about"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>